--- a/.cnb.yml
+++ b/.cnb.yml
@@ -10,7 +10,7 @@ $:
       # 开发环境启动后会执行的任务
       stages:
         - name: ls
-          script: apt update -y && apt install -y make git
+          script: apt update -y && apt install -y make git  openssh-server
 mvp:
   # 事件名
   push:
